# TzarRemake

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  resources.json
src/: Delegate.hpp  GameEngine.cpp  GameEngine.h  LoadingScreen.cpp  LoadingScreen.h  ResourceData.h  ResourceManager.h  StateMachine.h  main.cpp
src/gui/: Button.cpp  Button.h  CommandHandler.cpp  CommandHandler.h  Container.cpp  Container.h  Delegate.h  EditBox.cpp  EditBox.h  EventHandler.h  GuiAllocators.h  Matrix.h  ProgramGUI.cpp  ProgramGUI.h  ResourceManager.h  ResourceManager.inl  Text.cpp  Text.h  Widget.h
src/handlers/: GenericHandler.h  StaticHandler.h
src/logic/: Delegate.h  Functions.cpp  Grid.cpp  Grid.h  PathingSystem.cpp  PathingSystem.h  allocators.h  defines.h
src/resources/: ResourceHolder.h  ResourceLoader.h  ResourceManager.h  ResourcePaths.h
src/states/: GameState.h  StateGameLoading.cpp  StateGameLoading.h  StateGameplay.cpp  StateGameplay.h  StateMenu.cpp  StateMenu.h
src/tester/: timer.cpp  timer.h
